<resources>
    <string name="app_name">MyMovie</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>

    <string name="now_playing">Now Playing</string>
    <string name="now_playing_description">Lebih mudah untuk mengetahui film yang sedang tampil</string>

    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_description">Tidak khawatir ketinggalan update film terbaru</string>

    <string name="cashless">Cashless</string>
    <string name="cashless_description">Gunakan e-wallet untuk transaksi tiket nonton</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="nama">Nama</string>
    <string name="email_address">Email Address</string>
    <string name="arrow_back">Arrow Back</string>
    <string name="photo">Photo</string>
    <string name="sign_up">Sign Up</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="welcome">Welcome, <br>Ade Bayu s</br></string>
    <string name="placeholder_username">Ade Bayu S</string>
    <string name="simpan_lanjutkan">Simpan dan Lanjutkan</string>
    <string name="name_user">Angga Risky</string>
    <string name="wallet">IDR 280.000</string>
    <string name="avengers_title">Avengers: Infinity War</string>
    <string name="genre_avenger">Action, Sci-fi, Kids</string>
    <string name="rate_avenger">9.7</string>
    <string name="storyboard">Storyboard</string>
    <string name="detail_film">The Avengers must stop Thanos, a mad Titan, and his  army from getting their hands on all the infinity stones.  However, the mad Titan is prepared to go to any lengths  to carry out his insane plan.</string>
    <string name="who_played">Who’s Played</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="simpan_data_baru">"Simpan Data Baru "</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_wallet">My Wallet</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="history">History</string>
    <string name="masuk_akun">Masuk Akun</string>
    <string name="dafat_akun">Daftar Akun Baru</string>

</resources>