<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    android:backgroundTint="@null"
    tools:context=".onboarding.OnboardingOneActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_lanjutkan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/shape_rectangle_pink"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/lanjutkan"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/et_username" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="-3dp"
        android:layout_marginEnd="24dp"
        android:background="?attr/editTextBackground"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:importantForAutofill="no"
        tools:text="adebayus"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:background="?attr/editTextBackground"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/et_username"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:importantForAutofill="no"
        tools:text="adebayus"
        />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        android:contentDescription="@string/arrow_back" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/nama"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/email_address"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nama"
        />

    <EditText
        android:id="@+id/et_nama"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="-3dp"
        android:layout_marginEnd="24dp"
        android:background="?attr/editTextBackground"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:text="Ade Bayu "
        />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="-3dp"
        android:layout_marginEnd="24dp"
        android:background="?attr/editTextBackground"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:text="sebade@gmail.com"
        />


</androidx.constraintlayout.widget.ConstraintLayout>